--- a/src/components/ApixNode.css
+++ b/src/components/ApixNode.css
@@ -1,8 +1,31 @@
-#apix-node {
-    
+.panel {
+    margin: auto;
+    width: 75%;
 }
 
-#info-box-container {
-    margin: auto;
-    width: 60%;
+.node-prop-key {
+    font-weight: bold;
+}
+
+#images-section-container {
+    width: 50%;
+    float: left;
+}
+
+#videos-section-container {
+    width: 50%;
+    float: left;
+}
+
+.video-container {
+    margin: 15px;
+}
+
+.image > img {
+    height: 140px;
+    width: 140px;
+    object-fit: cover;
+    overflow: hidden;
+    margin: 10px;
+    float: left;
 }
