--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,21 @@ body {
   font-size: large;
 }
 
+img.node-img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.profile-img {
+  width: 200px;
+  max-height: 300px;
+}
+
+.cover-img {
+  height: 200px;
+  width: 533px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
