--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,32 @@ body {
   font-size: large;
 }
 
+.shadow-overlay {
+  position: relative;
+}
+
+.shadow-overlay:after {
+  content: " ";
+  z-index: 10;
+  display: block;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.75);
+}
+
+.loading-spinner {
+    position: fixed;
+    z-index: 12;
+    margin-top: -60px;
+    margin-left: -60px;
+    left: 50%;
+    top: 50%;
+}
+
 img.node-img {
   max-width: 100%;
   max-height: 100%;
