Implemented display of relationships wit node instances

--- a/src/components/NodeInstance/NodeInstance.css
+++ b/src/components/NodeInstance/NodeInstance.css
@@ -69,3 +69,18 @@
 .glyphicon {
     margin-right: 5px;
 }
+
+.relationships-container {
+  margin-top: 15px;
+}
+
+.rel-direction-title {
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+.rel-instance-type {
+  margin-top: 10px;
+  font-size: 16px;
+}
