Added login logic to home

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -15,7 +15,29 @@
 }
 
 .home-header {
-  margin-top: 135px;
+  margin-top: 100px;
+}
+
+.home-header > .btn-success {
+  margin: 5px;
+  color: #ffffff;
+  background-color: #00967B;
+  border-color: #00836C;
+}
+
+.home-header > .btn-success:hover,
+.home-header > .btn-success:focus,
+.home-header > .btn-success:active,
+.home-header > .btn-success.active {
+  color: #fff;
+  background-color: #00836C;
+  border-color: #00836C;
+}
+
+.home-header > .btn-success:focus:active {
+  color: #fff;
+  background-color: #006F5B;
+  border-color: #00836C;
 }
 
 .home-intro {
