Implemented user action creators and reducers, implemented login api call

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -18,6 +18,11 @@
   margin-top: 100px;
 }
 
+.home-header > .form {
+  margin: 5px;
+  color: #000;
+}
+
 .home-header > .btn-success {
   margin: 5px;
   color: #ffffff;
