--- a/src/components/Repo/Repo.css
+++ b/src/components/Repo/Repo.css
@@ -4,7 +4,6 @@
 
 .panel-title .dropdown {
   margin-left: 10px;
-  display: inline;
 }
 
 .panel-title .dropdown .caret {
@@ -17,6 +16,19 @@
 }
 
 /* SIDEBAR CLASSES */
+.sidemenu-header {
+  margin: 0 -2.3em 2em -2.3em;
+  padding: .75em .5em .5em .5em;
+  background: #eee;
+  border-bottom: 2px solid #ccc;
+  color: #666;
+}
+
+.bm-menu .property-populator label {
+  color: #666;
+}
+
+/* SIDEBAR DEFAULT CLASSES */
 /* Position and sizing of burger button */
 .bm-burger-button {
   display: none;
@@ -35,13 +47,13 @@
 
 /* Color/shape of close button cross */
 .bm-cross {
-  background: #bdc3c7;
+  background: #333;
 }
 
 /* General sidebar styles */
 .bm-menu {
-  background: #373a47;
-  padding: 2.5em 1.5em 0;
+  background: #f5f5f5;
+  padding: 0 1.5em 0;
   font-size: 1.15em;
 }
 
@@ -53,7 +65,7 @@
 /* Wrapper for item list */
 .bm-item-list {
   color: #b8b7ad;
-  padding: 0.8em;
+  padding: 0 0.8em;
 }
 
 /* Styling of overlay */
