--- a/src/components/Repo/Repo.css
+++ b/src/components/Repo/Repo.css
@@ -16,8 +16,8 @@
 }
 
 .template-item > .btn {
-  position: relative;
-  top: -5px;
+  margin-top: -5px;
+  margin-right: -8px;
   float: right;
   padding: 4px 8px;
 }
