Implemented inline editing for template, changes not yet saved

--- a/src/components/Repo/Repo.css
+++ b/src/components/Repo/Repo.css
@@ -54,7 +54,7 @@
   width: 100%;
 }
 
-.template-item > .template-edit-btn {
+.apix-template > .template-edit-btn {
   right: 5px;
   top: 0px;
   position: absolute;
