--- a/src/components/Repo/Repo.css
+++ b/src/components/Repo/Repo.css
@@ -77,7 +77,22 @@
 }
 
 .template-item > .template-label-wrapper {
+  position: relative;
   padding: 10px 15px;
+}
+
+.template-label-wrapper > .template-edit-btn {
+  position: absolute;
+  top: 0px;
+  right: 5px;
+}
+
+.template-label-wrapper > .template-label input {
+  margin: auto;
+  width: 50%;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1em;
 }
 
 .apix-template {
