--- a/src/components/Repo/Repo.css
+++ b/src/components/Repo/Repo.css
@@ -1,5 +1,7 @@
 .hidden { display: none; }
 
+.clearfix { overflow: auto; }
+
 .repo-container {
   min-height: 700px;
   padding-bottom: 50px;
@@ -15,6 +17,30 @@
   margin-left: 10px;
 }
 
+.repo-panel .template-col, .repo-panel .node-col {
+  width: 50%;
+  float: left;
+}
+
+.repo-panel .panel-heading {
+  background-color: #f5f5f5;
+  border-color: #ddd;
+  padding: 0px 10px;
+  border-bottom: 1px solid #ddd;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  min-height: 70px;
+}
+
+.node-col > .panel-heading > h3 {
+  margin-top: 20px;
+}
+
+.repo-panel > .row {
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
 .repo-panel h3 {
   float: left;
   display: inline;
@@ -24,8 +50,8 @@
 
 .repo-panel .btn {
   float: right;
-  margin-top: 10px;
-  margin-right: 5px;
+  margin-top: 16px;
+  margin-right: 10px;
 }
 
 .repo-panel .glyphicon {
