--- a/src/components/Repo/Repo.css
+++ b/src/components/Repo/Repo.css
@@ -178,6 +178,16 @@
   width: auto !important;
 }
 
+.nodes-searchbar .input-group > select:not([multiple]) {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-position: right 50%;
+  background-repeat: no-repeat;
+  background-image: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="utf-8"?><!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="12" version="1"><path d="M4 8L0 4h8z"/></svg>');
+  padding: .5em;
+  padding-right: 1.5em
+}
+
 .node-instance-wrapper {
   color: #337ab7;
 }
