Implemented timer on select template popover and initial nodes tests

--- a/src/components/Repo/Repo.css
+++ b/src/components/Repo/Repo.css
@@ -169,6 +169,14 @@
   margin: 5px;
 }
 
+.nodes-panel-container {
+  position: relative; 
+}
+
+.nodes-panel-container > .popover.left {
+  margin-top: 15px;
+}
+
 .nodes-searchbar {
   margin-top: 10px;
   width: 90%;
