Implemented basic version of autocomplete for relationship from / to templates

--- a/src/components/Repo/Repo.css
+++ b/src/components/Repo/Repo.css
@@ -169,6 +169,10 @@
   margin: 5px;
 }
 
+.related-templates-container {
+  margin-bottom: 20px;
+}
+
 .nodes-panel-container {
   position: relative; 
 }
